unpackaged/main/default/objects/Service__c/fields/Advisory_Account_To_Pay_From__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Account_To_Pay_From__c</fullName>
    <label>Advisory Account To Pay From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>