unpackaged/main/default/objects/Service__c/fields/Amount_Due_Upon_Completion__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_Upon_Completion__c</fullName>
    <label>Amount Due Upon Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>