unpackaged/main/default/objects/Service__c/fields/Annuity_Exchange_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Annuity_Exchange_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annuity Exchange Analysis</label>
    <type>Checkbox</type>
</CustomField>