unpackaged/main/default/objects/Service__c/fields/Asset_and_Liability_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Asset_and_Liability_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset and Liability Analysis</label>
    <type>Checkbox</type>
</CustomField>