unpackaged/main/default/objects/Service__c/fields/Cash_Flow_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Flow Analysis</label>
    <type>Checkbox</type>
</CustomField>