unpackaged/main/default/objects/Service__c/fields/Charity_Philanthropy__c.field-meta.xml
<CustomField>
    <fullName>Charity_Philanthropy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charity &amp; Philanthropy</label>
    <type>Checkbox</type>
</CustomField>