unpackaged/main/default/objects/Service__c/fields/Collaboration_with_Other_Advisors__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_with_Other_Advisors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collaboration with Other Advisors</label>
    <type>Checkbox</type>
</CustomField>