unpackaged/main/default/objects/Service__c/fields/College_Education_Planning__c.field-meta.xml
<CustomField>
    <fullName>College_Education_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College / Education Planning</label>
    <type>Checkbox</type>
</CustomField>