unpackaged/main/default/objects/Service__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>