unpackaged/main/default/objects/Service__c/fields/Divorce_Planning__c.field-meta.xml
<CustomField>
    <fullName>Divorce_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Divorce Planning</label>
    <type>Checkbox</type>
</CustomField>