unpackaged/main/default/objects/Service__c/fields/Estate_Analysis_To_Facilitate_Planning__c.field-meta.xml
<CustomField>
    <fullName>Estate_Analysis_To_Facilitate_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estate Analysis To Facilitate Planning</label>
    <type>Checkbox</type>
</CustomField>