unpackaged/main/default/objects/Service__c/fields/Estimated_Project_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Project_Completion_Date__c</fullName>
    <label>Estimated Project Completion Date</label>
    <type>Date</type>
</CustomField>