unpackaged/main/default/objects/Service__c/fields/Family_Governance__c.field-meta.xml
<CustomField>
    <fullName>Family_Governance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Governance</label>
    <type>Checkbox</type>
</CustomField>