unpackaged/main/default/objects/Service__c/fields/Goal_Setting__c.field-meta.xml
<CustomField>
    <fullName>Goal_Setting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goal Setting</label>
    <type>Checkbox</type>
</CustomField>