unpackaged/main/default/objects/Service__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>