unpackaged/main/default/objects/Service__c/fields/Income_Tax_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income Tax Analysis</label>
    <type>Checkbox</type>
</CustomField>