unpackaged/main/default/objects/Service__c/fields/Investment_Allocation_Consulting__c.field-meta.xml
<CustomField>
    <fullName>Investment_Allocation_Consulting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investment Allocation Consulting</label>
    <type>Checkbox</type>
</CustomField>