unpackaged/main/default/objects/Service__c/fields/Life_and_Disability_Insurance_Needs__c.field-meta.xml
<CustomField>
    <fullName>Life_and_Disability_Insurance_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Life and Disability Insurance Needs</label>
    <type>Checkbox</type>
</CustomField>