unpackaged/main/default/objects/Service__c/fields/Long_Term_Care_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Care_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long Term Care Analysis</label>
    <type>Checkbox</type>
</CustomField>