unpackaged/main/default/objects/Service__c/fields/Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment__c</fullName>
    <label>Method of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>From Advisory Account</fullName>
            </value>
            <value>
                <fullName>Credit Card/ACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>