unpackaged/main/default/objects/Service__c/fields/Multi__c.field-meta.xml
<CustomField>
    <fullName>Multi__c</fullName>
    <label>Multi-Family Office Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Governance</fullName>
            </value>
            <value>
                <fullName>Charity &amp; Philanthropy</fullName>
            </value>
            <value>
                <fullName>Tax Preparation &amp; Tax Planning</fullName>
            </value>
            <value>
                <fullName>Trust &amp; Corporate Services</fullName>
            </value>
            <value>
                <fullName>Wealth Planning</fullName>
            </value>
            <value>
                <fullName>Collaboration with Other Advisors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>