unpackaged/main/default/objects/Service__c/fields/Philanthropic_Gifting_Programs__c.field-meta.xml
<CustomField>
    <fullName>Philanthropic_Gifting_Programs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Philanthropic / Gifting Programs</label>
    <type>Checkbox</type>
</CustomField>