unpackaged/main/default/objects/Service__c/fields/Retirement_Planinng_Projections__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Planinng_Projections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retirement Planinng / Projections</label>
    <type>Checkbox</type>
</CustomField>