unpackaged/main/default/objects/Service__c/fields/Risk_Management_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Management Analysis</label>
    <type>Checkbox</type>
</CustomField>