unpackaged/main/default/objects/Service__c/fields/Risk_Tolerance_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tolerance_Assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk Tolerance Assessment</label>
    <type>Checkbox</type>
</CustomField>