unpackaged/main/default/objects/Service__c/fields/Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services (Secondary Owner)</relationshipLabel>
    <relationshipName>ServiceAgreementsSecondaryOwner</relationshipName>
    <type>Lookup</type>
</CustomField>