unpackaged/main/default/objects/Service__c/fields/Small_Business_Retirement_Plan_Design__c.field-meta.xml
<CustomField>
    <fullName>Small_Business_Retirement_Plan_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Small Business Retirement Plan Design</label>
    <type>Checkbox</type>
</CustomField>