unpackaged/main/default/objects/Service__c/fields/Special_Needs_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Needs Analysis</label>
    <type>Checkbox</type>
</CustomField>