unpackaged/main/default/objects/Service__c/fields/Tax_Preparation_Tax_Planning__c.field-meta.xml
<CustomField>
    <fullName>Tax_Preparation_Tax_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Preparation &amp; Tax Planning</label>
    <type>Checkbox</type>
</CustomField>