unpackaged/main/default/objects/Service__c/fields/Terms_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Payment__c</fullName>
    <label>Terms of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly Fee</fullName>
            </value>
            <value>
                <fullName>Fixed Project Fee</fullName>
            </value>
            <value>
                <fullName>Fixed Annual Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>