unpackaged/main/default/objects/Service__c/fields/Trust_Corporate_Services__c.field-meta.xml
<CustomField>
    <fullName>Trust_Corporate_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trust &amp; Corporate Services</label>
    <type>Checkbox</type>
</CustomField>