unpackaged/main/default/objects/Service__c/fields/Wealth_Planning__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wealth Planning</label>
    <type>Checkbox</type>
</CustomField>