unpackaged/main/default/objects/Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Household__c</columns>
    <columns>Type__c</columns>
    <columns>Case__c</columns>
    <columns>Annual_Fee__c</columns>
    <columns>Method_of_Payment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>